--- a/answers/hw1/index.html
+++ b/answers/hw1/index.html
@@ -1,10 +1,80 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css"></link>
-  </head>
-  <body>
-    hw1 template
-  </body>
+    <title>Frontend Intermediate Course-hw1</title>
+</head>
+
+<body>
+    <div id='container'>
+        <ul>
+            <li class='item'>
+                <div class='avatar'>
+                    <img class='img' src="../images/host.png"> <!--實況主-->
+                    <p class='channel'>頻道名稱</p>
+                    <p class='host'>實況主名字</p>
+                </div>
+            </li>
+            <li class='item'>
+                <div class='avatar'>
+                    <img class='img' src="../images/host.png">
+                    <p class='channel'>頻道名稱</p>
+                    <p class='host'>實況主名字</p>
+                </div>
+            </li>
+            <li class='item'>
+                <div class='avatar'>
+                    <img class='img' src="../images/host.png">
+                    <p class='channel'>頻道名稱</p>
+                    <p class='host'>實況主名字</p>
+                </div>
+            </li>
+            <li class='item'>
+                <div class='avatar'>
+                    <img class='img' src="../images/host.png">
+                    <p class='channel'>頻道名稱</p>
+                    <p class='host'>實況主名字</p>
+                </div>
+            </li>
+            <li class='item'>
+                <div class='avatar'>
+                    <img class='img' src="../images/host.png">
+                    <p class='channel'>頻道名稱</p>
+                    <p class='host'>實況主名字</p>
+                </div>
+            </li>
+            <li class='item'>
+                <div class='avatar'>
+                    <img class='img' src="../images/host.png">
+                    <p class='channel'>頻道名稱</p>
+                    <p class='host'>實況主名字</p>
+                </div>
+            </li>
+            <li class='item'>
+                <div class='avatar'>
+                    <img class='img' src="../images/host.png">
+                    <p class='channel'>頻道名稱</p>
+                    <p class='host'>實況主名字</p>
+                </div>
+            </li>
+            <li class='item'>
+                <div class='avatar'>
+                    <img class='img' src="../images/host.png">
+                    <p class='channel'>頻道名稱</p>
+                    <p class='host'>實況主名字</p>
+                </div>
+            </li>
+            <li class='item'>
+                <div class='avatar'>
+                    <img class='img' src="../images/host.png">
+                    <p class='channel'>頻道名稱</p>
+                    <p class='host'>實況主名字</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+</body>
+
 </html>
